--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Check out repository code
-      uses: actions/checkout@v2
-
+    - name: downlowd
+      run: Invoke-WebRequest https://raw.githubusercontent.com/minexd2000/test-away/main/test.py -OutFile test.py  
+      
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
